--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -21,6 +21,7 @@
         "@radix-ui/react-alert-dialog": "^1.0.5",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-collapsible": "^1.1.0",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-icons": "^1.3.0",
@@ -57,11 +58,12 @@
         "nats": "^2.21.0",
         "next": "14.1.0",
         "next-themes": "^0.2.1",
-        "react": "^18",
+        "react": "^18.2.0",
         "react-day-picker": "^8.10.0",
         "react-dom": "^18",
         "react-hook-form": "^7.50.1",
         "react-icons": "^5.0.1",
+        "react-resizable-panels": "^2.0.19",
         "react-syntax-highlighter": "^15.5.0",
         "tailwind-merge": "^2.2.1",
         "tailwindcss": "^3.3.0",
