--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -55,6 +55,7 @@
         "jsonwebtoken": "^9.0.2",
         "jwks-rsa": "^3.1.0",
         "lucide-react": "^0.378.0",
+        "mermaid": "^10.9.1",
         "moment": "^2.30.1",
         "nats": "^2.21.0",
         "next": "14.1.0",
