--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -52,6 +52,8 @@
         "date-fns": "^3.3.1",
         "form-urlencoded": "^6.1.4",
         "js-yaml": "^4.1.0",
+        "json-refs": "^3.0.15",
+        "json-schema-to-zod": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
         "jwks-rsa": "^3.1.0",
         "lucide-react": "^0.378.0",
@@ -60,6 +62,9 @@
         "nats": "^2.21.0",
         "next": "14.1.0",
         "next-themes": "^0.2.1",
+        "prettier": "^3.3.2",
+        "prismjs": "^1.29.0",
+        "quicktype-core": "^23.0.170",
         "react": "^18.2.0",
         "react-day-picker": "^8.10.0",
         "react-dom": "^18",
@@ -79,6 +84,7 @@
         "@types/node": "^20",
         "@types/office-js": "^1.0.373",
         "@types/office-runtime": "^1.0.35",
+        "@types/prismjs": "^1.26.4",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "autoprefixer": "^10.0.1",
