--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -50,6 +50,7 @@
         "clsx": "^2.1.0",
         "cmdk": "^0.2.1",
         "date-fns": "^3.3.1",
+        "dnd-core": "^16.0.1",
         "form-urlencoded": "^6.1.4",
         "js-yaml": "^4.1.0",
         "json-refs": "^3.0.15",
@@ -59,6 +60,7 @@
         "lucide-react": "^0.378.0",
         "mermaid": "^10.9.1",
         "moment": "^2.30.1",
+        "nanoid": "^5.0.7",
         "nats": "^2.21.0",
         "next": "14.1.0",
         "next-themes": "^0.2.1",
@@ -67,6 +69,8 @@
         "quicktype-core": "^23.0.170",
         "react": "^18.2.0",
         "react-day-picker": "^8.10.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18",
         "react-hook-form": "^7.50.1",
         "react-icons": "^5.0.1",
