--- a/.koksmat/magicapp.yaml
+++ b/.koksmat/magicapp.yaml
@@ -1,133 +1,11 @@
 # https://locize.com/blog/next-app-dir-i18n/
-name: people
+name: studio
 type: magicservice
 organisation: magicbutton
 magicappversion: v0.0.1
 description: |
   Application focusing on having a single point of entry in the form of a `person` to find all related information 
   - Users, Companies, Groups, Relations, Systems, Countries
-react:
-  templates:
-    formfield: &formfield
-      markup: |
-        <FormField
-         control={form.control}
-         name="##NAME##"
-         render={({ field }) => (
-           <FormItem>
-             <FormLabel>##LABEL##</FormLabel>
-             <FormControl>
-               ##FORMCONTROL##
-             </FormControl>
-             <FormDescription>
-               ##DESCRIPTION##
-             </FormDescription>
-             <FormMessage />
-           </FormItem>
-         )}
-        />
-  components:
-    stringformfield: &StringFormField
-      name: formfield
-      template: *formfield
-      markup: |
-        <Input placeholder="##PLACEHOLDER##" {...field} />
-
-    numberformfield: &NumberFormField
-      name: formfield
-      template: *formfield
-
-      markup: |
-        <Input placeholder="##PLACEHOLDER##" {...field} />
-    intformfield: &IntFormField
-      name: formfield
-      template: *formfield
-
-      markup: |
-        <Input placeholder="##PLACEHOLDER##" {...field} />
-    datetimeformfield: &DateTimeFormField
-      name: formfield
-      template: *formfield
-
-      markup: |
-        <Input placeholder="##PLACEHOLDER##" {...field} />
-    booleanformfield: &BooleanFormField
-      name: formfield
-      template: *formfield
-      markup: |
-        <div>Boolean not implemented</div>
-      # markup: |
-      #   <Input placeholder="##PLACEHOLDER##" {...field} />
-    arrayformfield: &ArrayFormField
-      name: formfield
-      template: *formfield
-
-      markup: |
-        <Input placeholder="##PLACEHOLDER##" {...field} />
-    lookupformfield: &LookupFormField
-      name: formfield
-      template: *formfield
-
-      markup: |
-        <Input placeholder="##PLACEHOLDER##" {...field} />
-    referenceformfield: &ReferenceFormField
-      name: formfield
-      template: *formfield
-
-      markup: |
-        <Input placeholder="##PLACEHOLDER##" {...field} />
-
-    jsonformfield: &JSONFormField
-      name: formfield
-      template: *formfield
-
-      markup: |
-        <Input placeholder="##PLACEHOLDER##" {...field} />
-    viewitem: &ViewItem
-      name: viewitem
-      markup: |
-        export function ViewItem<T>(props: {caption:string, value:T}) {
-        const {caption, value} = props;
-        return (
-        <div>
-          <div className="font-bold">{caption}</h1>
-          <div >{value}</h1>
-        </div>
-        )
-        }
-    formitem: &EditItem
-      name: formitem
-      markup: |
-        export function EditItem<T>(props: { caption:string, FormField : FormFieldType<T>, value:T, onChange: (value:T) => void}) {
-        const {caption, value,ForField} = props;
-        return (
-        <div>
-          <div className="font-bold">{caption}</h1>
-          <div ><FormField<T> onChange={onChange} value={value} /></h1>
-        </div>
-        )
-        }
-defaults:
-  viewitem: *ViewItem
-  edititem: *EditItem
-  primitive:
-    json:
-      formfield: *JSONFormField
-
-    string:
-      formfield: *StringFormField
-    number:
-      formfield: *NumberFormField
-    datetime:
-      formfield: *DateTimeFormField
-    int:
-      formfield: *IntFormField
-    boolean:
-      formfield: *BooleanFormField
-    array:
-      formfield: *ArrayFormField
-    reference:
-      formfield: *LookupFormField
 baseattributes:
   record:
     &recordAttributes # Id + Created + Updated + CreatedBy + UpdatedBy are implicit
