--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -57,6 +57,7 @@
         "json-schema-to-zod": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
         "jwks-rsa": "^3.1.0",
+        "jwt-decode": "^4.0.0",
         "lucide-react": "^0.378.0",
         "mermaid": "^10.9.1",
         "moment": "^2.30.1",
