--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -69,6 +69,7 @@
         "prismjs": "^1.29.0",
         "quicktype-core": "^23.0.170",
         "react": "^18.2.0",
+        "react-cookie": "^7.1.4",
         "react-day-picker": "^8.10.0",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
