--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -17,6 +17,7 @@
         "@azure/msal-react": "^2.0.12",
         "@hookform/resolvers": "^3.3.4",
         "@lucide/lab": "^0.1.1",
+        "@monaco-editor/react": "^4.6.0",
         "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-alert-dialog": "^1.0.5",
         "@radix-ui/react-avatar": "^1.0.4",
