--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -62,6 +62,7 @@
         "lucide-react": "^0.378.0",
         "mermaid": "^10.9.1",
         "moment": "^2.30.1",
+        "monaco-editor": "^0.50.0",
         "nanoid": "^5.0.7",
         "nats": "^2.21.0",
         "next": "14.1.0",
@@ -79,6 +80,7 @@
         "react-icons": "^5.0.1",
         "react-resizable-panels": "^2.0.19",
         "react-syntax-highlighter": "^15.5.0",
+        "sql-formatter": "^15.3.2",
         "tailwind-merge": "^2.2.1",
         "tailwindcss": "^3.3.0",
         "tailwindcss-animate": "^1.0.7",
