--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -45,6 +45,7 @@
         "@types/clipboard": "^2.0.7",
         "@types/react-syntax-highlighter": "^15.5.11",
         "ai": "^3.1.13",
+        "ansi_up": "^6.0.2",
         "axios": "^1.6.7",
         "class-variance-authority": "^0.7.0",
         "clipboard": "^2.0.11",
