--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -15,6 +15,9 @@
         "@ai-sdk/openai": "^0.0.14",
         "@azure/msal-browser": "^3.10.0",
         "@azure/msal-react": "^2.0.12",
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@faker-js/faker": "^8.4.1",
         "@hookform/resolvers": "^3.3.4",
         "@lucide/lab": "^0.1.1",
