--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -94,6 +94,7 @@
         "tailwindcss": "^3.3.0",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^0.9.0",
+        "yaml": "^2.5.0",
         "zod": "^3.22.4",
         "zod-schema-faker": "^1.0.0"
     },
