--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -45,9 +45,11 @@
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
+        "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.0.7",
         "@tanstack/react-table": "^8.12.0",
         "@types/clipboard": "^2.0.7",
+        "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-syntax-highlighter": "^15.5.11",
         "ai": "^3.1.13",
         "ajv": "^8.17.1",
@@ -76,10 +78,12 @@
         "nats": "^2.21.0",
         "next": "14.2.5",
         "next-themes": "^0.2.1",
+        "node-jq": "^6.0.1",
         "prettier": "^3.3.2",
         "prismjs": "^1.29.0",
         "quicktype-core": "^23.0.170",
         "react": "^18.2.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-cookie": "^7.1.4",
         "react-day-picker": "^8.10.0",
         "react-dnd": "^16.0.1",
