--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -57,6 +57,7 @@
         "axios": "^1.6.7",
         "class-variance-authority": "^0.7.0",
         "clipboard": "^2.0.11",
+        "clipboard-copy": "^4.0.1",
         "clsx": "^2.1.0",
         "cmdk": "^0.2.1",
         "date-fns": "^3.3.1",
