--- a/.koksmat/web/package.json
+++ b/.koksmat/web/package.json
@@ -68,6 +68,7 @@
         "json-refs": "^3.0.15",
         "json-schema-faker": "^0.5.6",
         "json-schema-to-zod": "^2.3.0",
+        "json-to-ts": "^2.1.0",
         "jsonwebtoken": "^9.0.2",
         "jwks-rsa": "^3.1.0",
         "jwt-decode": "^4.0.0",
